--- a/GR_rss/style.css
+++ b/GR_rss/style.css
@@ -2,7 +2,7 @@ body {
   font-family: 'Arial', sans-serif;
   margin: 0;
   padding: 0;
-  background-color: #f0f8ff;
+  background-color: #92A8D1;
   display: flex;
   justify-content: center;
   align-items: center;
